--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Ask4some</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="welcome">Welcome to Ask4some</string>
     <string name="action_settings">Settings</string>
 </resources>
