--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="welcome">Welcome to Ask4some</string>
     <string name="action_settings">Settings</string>
+    <string name="welcome2">Welcome to Ask4some 2 screen</string>
 </resources>
