--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">Ask4some</string>
-
-    <string name="hello_world">Hello world!</string>
     <string name="welcome">Welcome to Ask4some</string>
     <string name="action_settings">Settings</string>
-    <string name="welcome2">Welcome to Ask4some 2 screen</string>
+    <string name="title_activity_answer">Answer</string>
 </resources>
